--- a/painter.html
+++ b/painter.html
@@ -1,45 +1,119 @@
 <!DOCTYPE html>
-<html>
-<head>
-    <title>
-        Intro to JS
-    </title>
-</head>
-<body>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Swarna Ashok Kumar</title>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD"
+      crossorigin="anonymous"
+    />
+    <script
+      src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
+      integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js"
+      integrity="sha384-mQ93GR66B00ZXjt0YO5KlohRA5SY2XofN4zfuZxLkoj1gXtW8ANNCe9d5Y3eG5eD"
+      crossorigin="anonymous"
+    ></script>
+  </head>
+  <link rel="stylesheet" href="style.css" />
+  <body>
+    <h2>Swarna Ashok Kumar - Painter entry</h2>
+    <br />
+    <div class="container">
+      <form class="form-group">
+        <label for="hidden_painter"><span>The hidden painter name</span></label>
+        <input
+          type="password"
+          id="password"
+          name="form1_age"
+          min="10"
+          max="50"
+          step="2"
+          value="Monet"
+        />
+        <br />
 
-    <h1>Painter entry Swarna Ashok Kumar </h1>
-    <h2>Getting input</h2>
+        <label for="Guess_painter"><span>Guess the painter</span></label>
+        <input
+          type="text"
+          id="guess"
+          name="form1_nick"
+          autofocus
+          placeholder="Enter your guess"
+        />
+        <br />
 
-    <form>
-        <label for="form1_age">What is your age </label>
-        <input type="number" id="form1_age" name="form1_age" min=10 max=50 step=2 value=30> <br>
+        <input
+          class="btn btn-dark"
+          type="button"
+          onclick="checkPainter()"
+          value="Check the guess"
+        />
+      </form>
+      <p id="result">This text will be replaced</p>
+    </div>
+    <br />
+    <div class="container">
+      <div class="row">
+        <p>please click on the image to see the changes</p>
+        <div class="col-md">
+          <img id="image" src="\strawberries plants.jpg" onclick="selectImage()" />
+        </div>
+      </div>
+    </div>
+  </body>
+  <script type="text/javascript">
+    let good = 0;
+    let oops = 0;
+    function checkPainter() {
+      hidden = document.getElementById("password").value;
+      guess = document.getElementById("guess").value;
+      results = document.getElementById("result");
 
-        <label for="form1_nick">What is your nickname </label>
-        <input type="text" id="form1_nick" name="form1_nick" autofocus> <br>
-
-        <input type="button" onclick="resolveForm()" value="Get values from form">
-    </form>
-
-
-    <p id="result">This text will be replaced </p>
-
-    <script>
-
-        function resolveForm() {
-            console.log("Getting form values")
-            age = document.getElementById("form1_age").value
-            nick = document.getElementById("form1_nick").value
-            confirmed = confirm("Are these the values? " + age + " and " + nick)
-
-            out = document.getElementById("result")
-            if (confirmed) {
-                out.innerHTML = "Values were confirmed"
-            } else {
-                out.innerHTML = "Values were not confirmed"
-            }
+      if (hidden == guess) {
+        good++;
+        alert("You got it right");
+        document.getElementById(
+          "result"
+        ).innerHTML = `<p><span style = "background-color:#d9f8d3">GoodCount: ${good}</span></p>`;
+      } else {
+        oops++;
+        alert("You got it wrong");
+        document.getElementById(
+          "result"
+        ).innerHTML = `<p><span style = "background-color:#f1a6a6">OopsCount: ${oops}</span></p>`;
+        noOfGuesses(oops);
+      }
+    }
+    let forImage = 1;
+    function selectImage() {
+      switch (forImage) {
+        case 1:
+          document.getElementById("image").src = "\Alder plant.jpg";
+          forImage++;
+          break;
+        case 2:
+          document.getElementById("image").src = "\Nepeta plant.jpg";
+          forImage++;
+          break;
+        case 3:
+          document.getElementById("image").src = "\strawberries plants.jpg";
+          forImage = 1;
+      }
+    }
+    function noOfGuesses(countNumberofWrongs) {
+        let count = countNumberofWrongs;
+        if (count == 10) {
+          alert("Sorry, ran out of guesses");
+          oops = 0;
         }
-    </script>
-
-</body>
-
+      }
+  </script>
 </html>
